# eas-sdk-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
examples/: attestation.rs  events.rs  schema.rs
src/: client.rs  lib.rs  schema.rs  schema_registry.rs  transaction.rs
src/contracts/: README.md  eas.rs  mod.rs  schema_registry.rs  shared_types.rs
src/eas/: attest.rs  mod.rs  revoke.rs  timestamp.rs
